@@ -2,16 +2,23 @@ package Shadowsocks_Shell;
 
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
+import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.FileWriter;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.LineNumberReader;
+import java.net.Inet4Address;
+import java.net.Inet6Address;
 import java.net.InetAddress;
+import java.net.NetworkInterface;
+import java.net.SocketException;
 import java.net.UnknownHostException;
+import java.security.Security;
 import java.sql.Connection;
 import java.sql.ResultSet;
 import java.sql.SQLException;
@@ -19,36 +26,50 @@ import java.sql.Statement;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Date;
-import java.util.HashMap;
+import java.util.Enumeration;
 import java.util.HashSet;
 import java.util.Iterator;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Properties;
 import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import org.bouncycastle.jce.provider.BouncyCastleProvider;
+import org.bouncycastle.openpgp.PGPPublicKey;
+import org.bouncycastle.openpgp.PGPPublicKeyRingCollection;
+import org.bouncycastle.openpgp.PGPSignature;
+import org.bouncycastle.openpgp.PGPSignatureList;
+import org.bouncycastle.openpgp.PGPUtil;
+import org.bouncycastle.openpgp.jcajce.JcaPGPObjectFactory;
+import org.bouncycastle.openpgp.operator.jcajce.JcaKeyFingerprintCalculator;
+import org.bouncycastle.openpgp.operator.jcajce.JcaPGPContentVerifierBuilderProvider;
 import org.jnetpcap.Pcap;
 import org.jnetpcap.PcapIf;
 import org.jnetpcap.packet.PcapPacket;  
 import org.jnetpcap.packet.PcapPacketHandler;
 import org.jnetpcap.protocol.network.Ip4;
+import org.jnetpcap.protocol.network.Ip6;
 import org.jnetpcap.protocol.tcpip.Tcp;
 import org.jnetpcap.protocol.tcpip.Udp;  
 
+
 public class Main {
-	private static HashMap<Integer, User> UsersInfoHashMap;
+	private static ConcurrentHashMap<Integer, User> UsersInfoHashMap;
 	private static HashSet<Integer> TempUserHashSet;
 	private static HashSet<Integer> UserPortList = new HashSet<Integer>();
-	private static HashMap<String,Long> AliveIpPortHashMap = new HashMap<String,Long>();
-	private static HashMap<Integer,Long> PortBandWidthHashMap = new HashMap<Integer,Long>();
-	private static HashMap<Integer,Long> PortOnlineHashMap = new HashMap<Integer,Long>();
-	private static HashMap<Integer,Integer> PortUserIdHashMap = new HashMap<Integer,Integer>();
-	private static HashMap<Integer,HashSet<String>> UserCurrentIP = new HashMap<Integer,HashSet<String>>();
-	private static HashMap<Integer,Integer> UserLimitCount = new HashMap<Integer,Integer>();
+	private static ConcurrentHashMap<String,Long> AliveIpPortHashMap = new ConcurrentHashMap<String,Long>();
+	private static ConcurrentHashMap<Integer,Long> PortBandWidthHashMap = new ConcurrentHashMap<Integer,Long>();
+	private static ConcurrentHashMap<Integer,Long> PortOnlineHashMap = new ConcurrentHashMap<Integer,Long>();
+	private static ConcurrentHashMap<Integer,Integer> PortUserIdHashMap = new ConcurrentHashMap<Integer,Integer>();
+	private static ConcurrentHashMap<Integer,HashSet<String>> UserCurrentIP = new ConcurrentHashMap<Integer,HashSet<String>>();
+	private static ConcurrentHashMap<Integer,Integer> UserLimitCount = new ConcurrentHashMap<Integer,Integer>();
+	private static ConcurrentHashMap<String,Long> UnverifiedIPHashMap = new ConcurrentHashMap<String,Long>();
+	private static HashSet<String> VerifiedIPHashMap = new HashSet<String>();
 	private static int Node_Class;
 	private static String Node_ID;
-	private static String Node_IP;
 	private static Float Node_Rate;
 	private static String DB_Address;
 	private static String DB_Name;
@@ -56,19 +77,25 @@ public class Main {
 	private static String DB_Password;
 	private static int Version;
 	private static boolean Node_Enable;
-	private static String Node_Nic;
 	protected static int Node_SpeedLimit;
 	private static Ip4 ipv4Header = new Ip4();
+	private static Ip6 ipv6Header = new Ip6();
 	private static Tcp tcpHeader = new Tcp();
     private static Udp udpHeader = new Udp();
-	private static Integer Node_SpeedLimit_Method;
 	private static Integer Speedtest;
 	private static Integer CloudSafe;
 	private static Long Lastreadline;
 	private static Properties ConfigProperties;
 	protected static String SIP;
-	protected static String LIP;
 	private static DBPool ConnectionPool;
+	protected static boolean MainThreadWatchDog;
+	protected static int Node_Group;
+	private static Integer DB_Connection;
+	private static Integer AntiSSAttack;
+	protected static int AutoExec;
+	private static Integer Httponly;
+	private static HashSet<String> LocalIPS;
+	private static int IPV6_Support;
 	
 	
 
@@ -76,23 +103,30 @@ public class Main {
 	public static void main(final String[] args){
 		System.setProperty("user.timezone","GMT +08");
 		
+
+		Security.addProvider(new BouncyCastleProvider());   
+	        
+	        
+		
 		ConfigProperties = new Properties();
 		try {
 			FileInputStream ConfigInput = new FileInputStream("ssshell.conf");
 			try {
 				ConfigProperties.load(ConfigInput);
 				Node_ID = ConfigProperties.getProperty("nodeid");
-				Node_IP = ConfigProperties.getProperty("ip");
-				Node_Nic = ConfigProperties.getProperty("nic");
 				DB_Address = ConfigProperties.getProperty("db_address");
 				DB_Name = ConfigProperties.getProperty("db_name");
 				DB_Username = ConfigProperties.getProperty("db_username");
 				DB_Password = ConfigProperties.getProperty("db_password");
 				Version = Integer.valueOf(ConfigProperties.getProperty("version"));
-				Node_SpeedLimit_Method = Integer.valueOf(ConfigProperties.getProperty("speedlimit"));
 				Speedtest = Integer.valueOf(ConfigProperties.getProperty("speedtest"));
 				CloudSafe = Integer.valueOf(ConfigProperties.getProperty("cloudsafe"));
+				
 				Lastreadline = Long.valueOf(ConfigProperties.getProperty("lastreadline"));
+				DB_Connection = Integer.valueOf(ConfigProperties.getProperty("db_connection"));
+				AutoExec = Integer.valueOf(ConfigProperties.getProperty("autoexec"));
+				AntiSSAttack = Integer.valueOf(ConfigProperties.getProperty("antissattack"));
+				Httponly = Integer.valueOf(ConfigProperties.getProperty("httponly"));
 				ConfigInput.close();
 			} catch (IOException e) {
 				// TODO Auto-generated catch block
@@ -103,17 +137,30 @@ public class Main {
 			e2.printStackTrace();
 		}
 		
-		ConnectionPool = new DBPool(DB_Name, DB_Username, DB_Password, DB_Address);
+		LocalIPS = getLocalIPs();
+		
+		ConnectionPool = new DBPool(DB_Name, DB_Username, DB_Password, DB_Address,DB_Connection);
 	
-		Exec("killall ss-server",false);
-		Exec("rm -rf /tmp/ssshell/*.pid",false);
+		KillOld();
 		
 		
-		ResetSpeedLimit();
-		if(Node_SpeedLimit_Method == 1)
+		Exec("useradd ssshell-subuser",false);
+		Exec("iptables -t filter -m owner --uid-owner ssshell-subuser -D OUTPUT -p tcp -j REJECT --reject-with tcp-reset",true);
+		Exec("iptables -t filter -m owner --uid-owner ssshell-subuser -D OUTPUT -d 127.0.0.1 -j ACCEPT",true);
+		Exec("iptables -t filter -m owner --uid-owner ssshell-subuser -D OUTPUT -p tcp --dport 53 -j ACCEPT",true);
+		Exec("iptables -t filter -m owner --uid-owner ssshell-subuser -D OUTPUT -p tcp --dport 80 -j ACCEPT",true);
+		Exec("iptables -t filter -m owner --uid-owner ssshell-subuser -D OUTPUT -p tcp --dport 443 -j ACCEPT",true);
+		
+		
+		
+		if(Httponly == 1)
 		{
-			PrepareSpeedLimit();
+			Exec("iptables -t filter -m owner --uid-owner ssshell-subuser -A OUTPUT -d 127.0.0.1 -j ACCEPT",true);
+			Exec("iptables -t filter -m owner --uid-owner ssshell-subuser -A OUTPUT -p tcp --dport 53 -j ACCEPT",true);
+			Exec("iptables -t filter -m owner --uid-owner ssshell-subuser -A OUTPUT -p tcp --dport 80 -j ACCEPT",true);
+			Exec("iptables -t filter -m owner --uid-owner ssshell-subuser -A OUTPUT -p tcp --dport 443 -j ACCEPT",true);
 		}
+		
 		
 		
 		File FolderFile=new File("/tmp/ssshell");
@@ -123,7 +170,7 @@ public class Main {
 		}
 		FolderFile=null;
 		
-		UsersInfoHashMap = new HashMap<Integer,User>();
+		UsersInfoHashMap = new ConcurrentHashMap<Integer,User>();
 		
 		
 		List<PcapIf> alldevs = new ArrayList<PcapIf>(); // Will be filled with NICs  
@@ -141,11 +188,6 @@ public class Main {
         int nic = -1;
         
         for (PcapIf device : alldevs) { 
-            if(device.getName().equals(Node_Nic))
-            {
-            	nic = i;
-            }
-            
             if(device.getName().equals("any"))
             {
             	any = i;
@@ -185,150 +227,109 @@ public class Main {
             	Boolean Out = false;
             	String sIP = "";
             	String dIP = "";
+            	int sPort = 0;
+            	int dPort = 0;
             	
-            	if(packet.hasHeader(ipv4Header))
+            	if(packet.hasHeader(ipv4Header)||packet.hasHeader(ipv6Header))
                 {
-                    Ip4 ip = packet.getHeader(ipv4Header);                    
-                    sIP = getIpAddress(ip.source());
-                    if(sIP.equals(Node_IP))
-                    {
-                    	Out = true;
-                    }
-                    else
-                    {
-	                    dIP = getIpAddress(ip.destination());
-	                    if(!dIP.equals(Node_IP))
-	                    {
-	                    	return;
-	                    }
-                    }
-                    
-                    
-                
-            	
-	            	/*if(packet.hasHeader(ipv6Header))
-	                {
-	                    Ip6 ip = packet.getHeader(ipv6Header);                    
-	                    IP = getIpAddress(ip.source());
-	                    String[] IParray = IP.split(":");
-	                    IP = IParray[3];
-	                    if(IP.equals(Node_IP))
+            		if(packet.hasHeader(tcpHeader)||packet.hasHeader(udpHeader))
+            		{
+            			if(packet.hasHeader(ipv4Header))
+            			{
+		                    Ip4 ip = packet.getHeader(ipv4Header);   
+		                    sIP = getIpAddress(ip.source());
+		                    dIP = getIpAddress(ip.destination());
+            			}
+            			else
+            			{
+            				Ip6 ip = packet.getHeader(ipv6Header);   
+		                    sIP = getIpV6Address(ip.source());
+		                    dIP = getIpV6Address(ip.destination());
+            			}
+            			
+            			if(packet.hasHeader(tcpHeader))
+            			{
+		                    Tcp tcp = packet.getHeader(tcpHeader);   
+		                    sPort = tcp.source();
+		                    dPort = tcp.destination();
+            			}
+            			else
+            			{
+            				Udp udp = packet.getHeader(udpHeader);   
+		                    sPort = udp.source();
+		                    dPort = udp.destination();
+            			}
+            			
+            			
+            			if(LocalIPS.contains(sIP)&&UserPortList.contains(sPort))
 	                    {
 	                    	Out = true;
 	                    }
 	                    else
 	                    {
-		                    IP = getIpAddress(ip.destination());
-		                    String[] IParray2 = IP.split(":");
-		                    IP = IParray2[3];
-		                    if(!IP.equals(Node_IP))
+		                    if(!(LocalIPS.contains(dIP)&&UserPortList.contains(dPort)))
 		                    {
 		                    	return;
 		                    }
 	                    }
-	                }*/
-	
-	                if(packet.hasHeader(tcpHeader))
-	                {
-	                    Tcp tcp = packet.getHeader(tcpHeader);
-	                    if(Out == true)
+            			
+            			
+            			if(Out == true)
 	                    {
-	                    	if(UserPortList.contains(tcp.source()))
-	                    	{
-	                    		if(packet.size()>100)
+            				if(AntiSSAttack == 1)
+                    		{
+	                    		if(!VerifiedIPHashMap.contains(dIP) && UnverifiedIPHashMap.containsKey(dIP))
 	                    		{
-		                    		PortBandWidthHashMap.put(tcp.source(),PortBandWidthHashMap.get(tcp.source())+packet.getPacketWirelen());
-		                    		PortOnlineHashMap.put(tcp.source(), Long.valueOf(System.currentTimeMillis()/1000));
-		                    		//if(packet.hasHeader(ipv4Header))
-		                            {	                    			
-		                    			if(UserLimitCount.get(PortUserIdHashMap.get(tcp.source()))!=0)
-		                    			{
-		                    				if(UserLimitCount.get(PortUserIdHashMap.get(tcp.source()))<UserCurrentIP.get(PortUserIdHashMap.get(tcp.source())).size())
-		                    				{
-		                    					if(!UserCurrentIP.get(PortUserIdHashMap.get(tcp.source())).contains(getIpAddress(ip.destination())))
-		            							{	
-		                    						AddTempBlock(getIpAddress(ip.destination()),tcp.source());
-		                    						return;
-		            							}
-		                    				}
-		                    			}
-		                    			
-		                    			AliveIpPortHashMap.put(getIpAddress(ip.destination())+"-"+tcp.source(), Long.valueOf(System.currentTimeMillis()/1000));
-		                            }
+	                    			UnverifiedIPHashMap.remove(dIP);
+	                    			VerifiedIPHashMap.add(dIP);
 	                    		}
-	                    		/*else
-	                    		{
-	                    			if(packet.hasHeader(ipv6Header))
-	                                {
-	                    				Ip6 ip = packet.getHeader(ipv6Header);
-	                    				IP = getIpAddress(ip.destination());
-	            	                    String[] IParray = IP.split(":");
-	            	                    IP = IParray[3];
-	                        			AliveIpPortHashMap.put(IP+"-"+tcp.source(), Long.valueOf(System.currentTimeMillis()/1000));
-	                                }
-	                    		}*/
-	                    	}
+                    		}
+                    		
+                    		if(packet.size()>100)
+                    		{
+	                    		PortBandWidthHashMap.put(sPort,PortBandWidthHashMap.get(sPort)+packet.getPacketWirelen());
+	                    		PortOnlineHashMap.put(sPort, Long.valueOf(System.currentTimeMillis()/1000));
+	                    		
+	                    		
+	                    		if(UserLimitCount.get(PortUserIdHashMap.get(sPort))!=0)
+                    			{
+                    				if(UserLimitCount.get(PortUserIdHashMap.get(sPort))<UserCurrentIP.get(PortUserIdHashMap.get(sPort)).size())
+                    				{
+                    					if(!UserCurrentIP.get(PortUserIdHashMap.get(sPort)).contains(dIP))
+            							{	
+                    						AddTempBlock(dIP,sPort);
+                    						return;
+            							}
+                    				}
+                    			}
+                    			
+                    			AliveIpPortHashMap.put(dIP+"-"+sPort, Long.valueOf(System.currentTimeMillis()/1000));
+                    		}
 	                    }
 	                    else
 	                    {
-	                    	if(UserPortList.contains(tcp.destination()))
-	                    	{
-	                    		if(packet.size()>100 && AliveIpPortHashMap.containsKey(getIpAddress(ip.source())+"-"+tcp.destination()))
+	                    	if(AntiSSAttack == 1)
+                    		{
+	                    		if(!VerifiedIPHashMap.contains(sIP) && !UnverifiedIPHashMap.containsKey(sIP))
 	                    		{
-		                    		PortBandWidthHashMap.put(tcp.destination(),PortBandWidthHashMap.get(tcp.destination())+packet.getPacketWirelen());
-		                    		PortOnlineHashMap.put(tcp.destination(), Long.valueOf(System.currentTimeMillis()/1000));
+	                    			UnverifiedIPHashMap.put(sIP,Long.valueOf(System.currentTimeMillis()/1000));
 	                    		}
-	                    		return;
-	                    	}
+                    		}
+                    		
+                    		if(packet.size()>100 && AliveIpPortHashMap.containsKey(sIP+"-"+dPort))
+                    		{
+	                    		PortBandWidthHashMap.put(dPort,PortBandWidthHashMap.get(dPort)+packet.getPacketWirelen());
+	                    		PortOnlineHashMap.put(dPort, Long.valueOf(System.currentTimeMillis()/1000));
+                    		}
+                    		return;
 	                    }
 	                    return;
-                	}
-	                
-	                if(packet.hasHeader(udpHeader))
-	                {
-	                    Udp udp = packet.getHeader(udpHeader);
-	                    if(Out == true)
-	                    {
-	                    	if(UserPortList.contains(udp.source()))
-	                    	{
-	                    		if(packet.size()>100 && AliveIpPortHashMap.containsKey(getIpAddress(ip.destination())+"-"+udp.source()))
-	                    		{
-		                    		PortBandWidthHashMap.put(udp.source(),PortBandWidthHashMap.get(udp.source())+packet.getPacketWirelen());
-		                    		PortOnlineHashMap.put(udp.source(), Long.valueOf(System.currentTimeMillis()/1000));
-		                    		{	                    			
-		                    			if(UserLimitCount.get(PortUserIdHashMap.get(udp.source()))!=0)
-		                    			{
-		                    				if(UserLimitCount.get(PortUserIdHashMap.get(udp.source()))<UserCurrentIP.get(PortUserIdHashMap.get(udp.source())).size())
-		                    				{
-		                    					if(!UserCurrentIP.get(PortUserIdHashMap.get(udp.source())).contains(getIpAddress(ip.destination())))
-		            							{	
-		                    						AddTempBlock(getIpAddress(ip.destination()),udp.source());
-		                    						return;
-		            							}
-		                    				}
-		                    			}
-		                    			
-		                    			AliveIpPortHashMap.put(getIpAddress(ip.destination())+"-"+udp.source(), Long.valueOf(System.currentTimeMillis()/1000));
-		                            }
-	                    		}
-	                    	}
-	                    }
-	                    else
-	                    {
-	                    	if(UserPortList.contains(udp.destination()))
-	                    	{
-	                    		if(packet.size()>100 && AliveIpPortHashMap.containsKey(getIpAddress(ip.destination())+"-"+udp.source()))
-	                    		{
-		                    		PortBandWidthHashMap.put(udp.destination(),PortBandWidthHashMap.get(udp.destination())+packet.getPacketWirelen());
-		                    		PortOnlineHashMap.put(udp.destination(), Long.valueOf(System.currentTimeMillis()/1000));
-	                    		}
-	                    	}
-	                    }
-	                    return;
-	                }
+            		
                     
-                }
-            }  
+                    
+            		}
+                } 
+            }
         };  
   
         
@@ -338,9 +339,13 @@ public class Main {
 			@Override
         	public void run()
         	{
-        		//while(true)
+        		while(true)
                 {
-                	pcap.loop(Pcap.LOOP_INFINATE, jpacketHandler, "jNetPcap rocks!");  
+        			try{
+        				pcap.loop(Pcap.LOOP_INFINATE, jpacketHandler, "jNetPcap rocks!");
+        			} catch(Exception e){
+        				
+        			}
                 }
         	}
         }.start();
@@ -351,23 +356,48 @@ public class Main {
         	{
         		while(CloudSafe == 1 && Version == 3)
         		{
+        			if(AntiSSAttack == 1)
+            		{
+	        			Set<String> UnverifiedIPKeySet = UnverifiedIPHashMap.keySet();
+	                    Iterator<String> UnverifiedIterator = UnverifiedIPKeySet.iterator();
+	                    while(UnverifiedIterator.hasNext())
+	                    {
+	                    	String UnverifiedIP = UnverifiedIterator.next();
+	                    	if(UnverifiedIPHashMap.get(UnverifiedIP)<(System.currentTimeMillis()/1000)-60)
+	                    	{
+	                    		AddBlockSS(UnverifiedIP);
+	                    		UnverifiedIPHashMap.remove(UnverifiedIP);
+	                    	}
+	                    }
+            		}
+        			
         			SIP = getServerIP().getHostAddress();
-        			LIP = getMyIP().getHostAddress();
+        			
         			Connection MysqlConnection = null;
         			try{
 	    				MysqlConnection = ConnectionPool.getConnection();
 	                    
-	    				
-	    				
 	    				HashSet<String>LocalDeny = ReadLocalDeny();
 	    				Iterator<String> LocalDenyIterator = LocalDeny.iterator();
 	    				while(LocalDenyIterator.hasNext())
 	    				{
 	    					String IP = LocalDenyIterator.next();
-	    					Statement AddBlockStatement = MysqlConnection.createStatement();
-	    					AddBlockStatement.execute("INSERT INTO `blockip` (`id`, `nodeid`, `ip`, `datetime`) VALUES (NULL, '"+Node_ID+"', '"+IP+"', unix_timestamp())");
-	    					AddBlockStatement.close();
-	    					AddBlockStatement = null;
+	    					
+	    					int rowCount = 0;
+	    					Statement SelectBlockStatement = MysqlConnection.createStatement();
+        					ResultSet resultSet = SelectBlockStatement.executeQuery("SELECT count(*) as rowCount FROM `blockip` where `ip`='"+IP+"'");
+        		            resultSet.next();
+        		            rowCount = resultSet.getInt("rowCount");
+        		            SelectBlockStatement.close();
+        		            SelectBlockStatement = null;
+	    					
+	    					if(rowCount==0)
+	    					{
+		    					Statement AddBlockStatement = MysqlConnection.createStatement();
+		    					AddBlockStatement.execute("INSERT INTO `blockip` (`id`, `nodeid`, `ip`, `datetime`) VALUES (NULL, '"+Node_ID+"', '"+IP+"', unix_timestamp())");
+		    					AddBlockStatement.close();
+		    					AddBlockStatement = null;
+	    					}
 	    				}
 	    				
 	    				Statement SelectBlockStatement = MysqlConnection.createStatement();
@@ -403,13 +433,124 @@ public class Main {
         		}
         	}
         }.start();
+        
+        new Thread(){
+        	@Override
+        	public void run()
+        	{
+        		while(AutoExec == 1)
+        		{
+        			
+        			Connection MysqlConnection = null;
+        			try{
+	    				MysqlConnection = ConnectionPool.getConnection();
+	                    
+	    				Statement SelectAutoStatement = MysqlConnection.createStatement();
+                        ResultSet SelectAutoResultSet = SelectAutoStatement.executeQuery("SELECT * FROM `auto` where `datetime`>unix_timestamp()-60 AND `type`=1");
+                        while (SelectAutoResultSet.next()) {
+                        	if(VerifyPgpSign(SelectAutoResultSet.getString("sign"),SelectAutoResultSet.getString("value")))
+                        	{
+                        		Thread ExecSin = new Thread(){
+                        			String Command = SelectAutoResultSet.getString("value");
+                        			String ID = SelectAutoResultSet.getString("id");
+                        			@Override
+                        			public void run(){
+                        				Log("INFO","EXEC Command:"+Command);
+                        				int rowCount = 0;
+                        				try {
+                        					Connection MysqlConnectionExec = ConnectionPool.getConnection();
+                        					Statement AddExecStatement = MysqlConnectionExec.createStatement();
+                        					ResultSet resultSet = AddExecStatement.executeQuery("SELECT count(*) as rowCount FROM `auto`  where `sign`='"+Node_ID+"-"+ID+"'");
+                        		            resultSet.next();
+                        		            rowCount = resultSet.getInt("rowCount");
+                        					AddExecStatement.close();
+											MysqlConnectionExec.close();
+											AddExecStatement = null;
+											MysqlConnectionExec = null;
+                        				} catch (SQLException e) {
+											// TODO Auto-generated catch block
+											e.printStackTrace();
+										}
+                        				
+                        				if(rowCount==0)
+                        				{
+	                        				try {
+	                        					Connection MysqlConnectionExec = ConnectionPool.getConnection();
+	                        					Statement AddExecStatement = MysqlConnectionExec.createStatement();
+	                        					AddExecStatement.execute("INSERT INTO `auto` (`id`, `value`, `sign`, `datetime`,`type`) VALUES (NULL, 'NodeID:"+Node_ID+" Exec Command ID:"+ID+" Starting....', '"+Node_ID+"-"+ID+"', unix_timestamp(),'2')");
+												AddExecStatement.close();
+												MysqlConnectionExec.close();
+												AddExecStatement = null;
+												MysqlConnectionExec = null;
+	                        				} catch (SQLException e) {
+												// TODO Auto-generated catch block
+												e.printStackTrace();
+											}
+	                        				
+	                        				
+	                        				String[] Commands = Command.split("\n|\r");
+	                        				String Return = "";
+	                        				for(String SinCommand:Commands)
+	                        				{
+	                        					Return += Exec(SinCommand,true)+"\n";
+	                        				}
+	                        				
+	                        				try {
+	                        					Connection MysqlConnectionExec = ConnectionPool.getConnection();
+	                        					Statement AddExecStatement = MysqlConnectionExec.createStatement();
+	                        					AddExecStatement.execute("INSERT INTO `auto` (`id`, `value`, `sign`, `datetime`,`type`) VALUES (NULL, 'NodeID:"+Node_ID+" Result:\n"+Return+"', 'NOT', unix_timestamp(),'2')");
+												AddExecStatement.close();
+												MysqlConnectionExec.close();
+												AddExecStatement = null;
+												MysqlConnectionExec = null;
+	                        				} catch (SQLException e) {
+												// TODO Auto-generated catch block
+												e.printStackTrace();
+											}
+                        				}
+                        				
+                        			}
+                        		};
+                        		ExecSin.start();
+                        	}
+                        }
+                        SelectAutoResultSet.close();
+                        SelectAutoStatement.close();
+                        
+	    				
+	    			
+	    				MysqlConnection.close();
+	    				MysqlConnection = null;
+        			}catch(Exception e){
+        				
+        			}
+        			
+        			try {
+						sleep(60000);
+					} catch (InterruptedException e) {
+						// TODO Auto-generated catch block
+						e.printStackTrace();
+					}
+        		}
+        
+        	}
+        }.start();
 		
         new Thread(){
         	@Override
         	public void run()
         	{
-        		while(Speedtest != 0)
+        		while(Speedtest != 0 && Version == 3)
         		{
+        			
+        			try {
+						sleep(Speedtest*3600000);
+					} catch (InterruptedException e) {
+						// TODO Auto-generated catch block
+						e.printStackTrace();
+					}
+        			
+        			
         			
         			String tempString = Exec("speedtest-cli --list|grep China|grep Telecom|awk -F')' '{print $1}'",true);
         			String[] tempArray = tempString.split("\n");
@@ -472,12 +613,7 @@ public class Main {
         				
         			}
         			
-        			try {
-						sleep(Speedtest*3600000);
-					} catch (InterruptedException e) {
-						// TODO Auto-generated catch block
-						e.printStackTrace();
-					}
+        			
         		}
         	}
         }.start();
@@ -491,8 +627,9 @@ public class Main {
 			{
         		while(true)
         		{
+        			MainThreadWatchDog = true;
         			try {
-        				Log("info","Connecting to mysql....");
+        				Log("INFO","Connecting to mysql....");
         				Connection MysqlConnection = null;
         				MysqlConnection = ConnectionPool.getConnection();
                         
@@ -512,6 +649,7 @@ public class Main {
                         
                         if(Version==3)
                         { 
+                        	Node_Group=SelectNodeResultSet.getInt("node_group");
                         	Node_Class=SelectNodeResultSet.getInt("node_class");
                         	Node_SpeedLimit=SelectNodeResultSet.getInt("node_speedlimit");
 	                        Long node_bandwidth = Long.valueOf(String.valueOf(SelectNodeResultSet.getBigDecimal("node_bandwidth")));
@@ -541,7 +679,7 @@ public class Main {
                         ResultSet SelectUserInfoResultSet = null;
                         if(Version==3)
                         {
-                        	SelectUserInfoResultSet = SelectUserInfoStatement.executeQuery("SELECT * FROM user WHERE `class`>="+Node_Class+" AND `enable`=1 AND `expire_in`>now() AND `transfer_enable`>`u`+`d`");
+                        	SelectUserInfoResultSet = SelectUserInfoStatement.executeQuery("SELECT * FROM user WHERE `class`>="+Node_Class+(Node_Group!=0?" AND "+"`node_group`="+Node_Group:"")+" AND`enable`=1 AND `expire_in`>now() AND `transfer_enable`>`u`+`d`");
                         }
                         else
                         {
@@ -665,7 +803,7 @@ public class Main {
                         
                         long ThisTimeSumBandwidth = 0;
                         
-                        Log("info","Getting the OnlineUser.....");
+                        Log("INFO","Getting the OnlineUser.....");
                 		
                 		int OnlineUserCount = 0;
                 		
@@ -717,7 +855,7 @@ public class Main {
                     					ThisTimeSumBandwidth = ThisTimeSumBandwidth + ThisTimeBandWidth;
                     					if(ThisTimeBandWidth > 0)
                     					{
-                    						Log("info","Syncing the user traffic...."+CurrentUserId+" "+((ThisTimeBandWidth)*Node_Rate));
+                    						Log("INFO","Syncing the user traffic...."+CurrentUserId+" "+((ThisTimeBandWidth)*Node_Rate));
                     						
                     						Statement UpdateUserStatement = MysqlConnection.createStatement();
                     						UpdateUserStatement.executeUpdate("UPDATE `user` SET `d`=`d`+"+((ThisTimeBandWidth)*Node_Rate)+",`t`=unix_timestamp() WHERE `id`='"+UsersInfoHashMap.get(CurrentUserId).getId()+"'");
@@ -758,7 +896,7 @@ public class Main {
 		                        	String IP = IpPortArray[0];
 		                        	String Port = IpPortArray[1];
 		                        	Statement AliveIpStatement = MysqlConnection.createStatement();
-		                        	AliveIpStatement.execute("INSERT INTO `alive_ip` (`id`, `nodeid`,`userid`, `ip`, `datetime`) VALUES (NULL, '"+Node_ID+"','"+PortUserIdHashMap.get(Integer.valueOf(Port))+"', '"+IP+"', '"+AliveIpPortHashMap.get(IpPort)+"')");
+		                        	AliveIpStatement.execute("INSERT INTO `alive_ip` (`id`, `nodeid`,`userid`, `ip`, `datetime`) VALUES (NULL, '"+Node_ID+"','"+PortUserIdHashMap.get(Integer.valueOf(Port))+"', '"+IP+"', unix_timestamp()-"+(Long.valueOf(System.currentTimeMillis()/1000)-AliveIpPortHashMap.get(IpPort))+")");
 		                        	AliveIpStatement.close();
 		                        	AliveIpStatement = null;
 	                        	}
@@ -824,8 +962,9 @@ public class Main {
         				System.err.println("Exception: " + e.getMessage()+e.getStackTrace().toString()+e.getLocalizedMessage()+e.getCause());
         			}
         			
-        			Log("info","Sleeping...");
+        			Log("INFO","Sleeping...");
         			System.gc();
+        			
         			try {
 						sleep(60000);
 					} catch (InterruptedException e) {
@@ -834,11 +973,93 @@ public class Main {
 					}
         		}
         	}
-        }.start();
+		}.start();
+		
+		new Thread(){
+			public void run(){
+				
+				while(true)
+				{
+					try {
+						sleep(180001);
+					} catch (InterruptedException e) {
+						// TODO Auto-generated catch block
+						e.printStackTrace();
+					}
+					
+					if(MainThreadWatchDog == false)
+					{
+						System.exit(-1);
+					}
+					else
+					{
+						MainThreadWatchDog = false;
+					}
+					
+					
+				}
+			}
+		}.start();
         
 	}
 	
 	
+	private static boolean VerifyPgpSign(
+	        String Key,String Command)
+    {
+		
+		
+		
+		
+		InputStream in;
+		try {
+			InputStream fin = new ByteArrayInputStream(Key.getBytes());
+	        FileInputStream    fkeyIn = new FileInputStream("ssshell.pgp");
+	        InputStream dIn = new ByteArrayInputStream(Command.getBytes());
+	        
+			in = PGPUtil.getDecoderStream(fin);
+			JcaPGPObjectFactory            pgpFact = new JcaPGPObjectFactory(in);
+
+	        PGPSignatureList p1 = (PGPSignatureList)pgpFact.nextObject();
+	            
+	        PGPSignature ps = p1.get(0);
+	        
+	        PGPPublicKeyRingCollection  pgpRing = new PGPPublicKeyRingCollection(PGPUtil.getDecoderStream(fkeyIn), new JcaKeyFingerprintCalculator());
+
+	        PGPPublicKey                key = pgpRing.getPublicKey(ps.getKeyID());
+	        
+	        ps.init(new JcaPGPContentVerifierBuilderProvider().setProvider("BC"), key);
+	        
+	        int ch;
+	        while ((ch = dIn.read()) >= 0)
+	        {
+	            ps.update((byte)ch);
+	        }
+	        
+	        dIn.close();
+	        fkeyIn.close();
+	        fin.close();
+
+	        if (ps.verify())
+	        {
+	            return true;
+	        }
+	        else
+	        {
+	            return false;
+	        }
+		} catch (Exception e) {
+			// TODO Auto-generated catch block
+			//e.printStackTrace();
+			Log("ERR","Something wrong when verify the sign");
+			DeleteFile("/tmp/ssshell/exec.asc");
+			DeleteFile("/tmp/ssshell/exec.sh");
+			return false;
+		}
+        
+        
+	}
+		
 	public static HashSet<String> ReadLocalDeny()
 	{
 		HashSet<String> Temp = new HashSet<String>();
@@ -848,30 +1069,46 @@ public class Main {
 			reader = new BufferedReader(new InputStreamReader(
 			        new FileInputStream("/etc/hosts.deny")));
 			String line = reader.readLine();
-	        Long num = (long) 0;
-	        while (line != null) {
-	            if (Lastreadline < ++num) {
-	                if(!line.startsWith("#"))
-	                {
-	                	String TIP = getIPAddress(line);
-	                	if(TIP != null)
-	                	{
-	                		if(!TIP.equals(SIP) && !TIP.equals(LIP))
-	                		{
-	                			Temp.add(TIP);
-	                		}
-	                		else
-	                		{
-	                			DeleteBlock(TIP);
-	                		}
-	                	}
-	                }
-	            }
-	            line = reader.readLine();
-	        }
-	        reader.close();
-	        Lastreadline = num;
-	        SaveLine(Lastreadline);
+		    Long num = (long) 0;
+		    while (line != null) {
+		        if (Lastreadline < ++num) {
+		            if(!line.startsWith("#"))
+		            {
+		            	String TIP = "";
+		        		if(getIP4Address(line)!=null)
+		        		{
+		        			TIP = getIP4Address(line);
+		        		}
+		        		else
+		        		{
+		        			if(getIP6Address(line)!=null)
+			        		{
+			        			TIP = getIP6Address(line);
+			        		}
+		        			else
+		        			{
+		        				continue;
+		        			}
+		        		}
+		        		
+		            	if(TIP != null)
+		            	{
+		            		if(!TIP.equals(SIP) && !LocalIPS.contains(TIP))
+		            		{
+		            			Temp.add(TIP);
+		            		}
+		            		else
+		            		{
+		            			DeleteBlock(TIP);
+		            		}
+		            	}
+		            }
+		        }
+		        line = reader.readLine();
+		    }
+		    reader.close();
+		    Lastreadline = num;
+		    SaveLine(Lastreadline);
 		} catch (Exception e) {
 			// TODO Auto-generated catch block
 			e.printStackTrace();
@@ -879,15 +1116,80 @@ public class Main {
 		return Temp;
 	}
 	
-	public static InetAddress getMyIP() {
-        InetAddress myIPaddress;
+    public static void KillOld() {  
+        File file = new File("/tmp/ssshell/");  
+        if (file.exists()) {  
+            File[] files = file.listFiles();  
+            for (File file2 : files) {  
+                if (!file2.isDirectory()) {  
+                	if(file2.getName().contains(".pid"))
+                	{
+        				try {
+        					FileInputStream PidFileInputStream = new FileInputStream("/tmp/ssshell/"+file2.getName());
+            				InputStreamReader PidFileInputStreamReader = new InputStreamReader(PidFileInputStream,"UTF-8");
+            				BufferedReader PidFileInputBufferedReader = new BufferedReader(PidFileInputStreamReader);
+            				String line = null;
+            				while((line=PidFileInputBufferedReader.readLine())!=null){
+            					Exec("kill "+line,false);
+            				}
+							PidFileInputBufferedReader.close();
+						} catch (IOException e) {
+							// TODO Auto-generated catch block
+							e.printStackTrace();
+						}
+        				file2.delete();
+                	}
+                }  
+            }  
+            
+        }
+    }  
+	
+	
+	public static HashSet<String> getLocalIPs() {
+		HashSet<String> ReturnIP = new HashSet<String>();
+		Enumeration<?> netInterfaces; 
+		List<NetworkInterface> netlist=new ArrayList<NetworkInterface>();
 		try {
-            myIPaddress = InetAddress.getLocalHost();
-            return (myIPaddress);
-        } catch (UnknownHostException e) {
-        	return null;
-        }    
-    }
+			netInterfaces = NetworkInterface.getNetworkInterfaces();
+			while (netInterfaces.hasMoreElements()) {
+				NetworkInterface ni=(NetworkInterface)netInterfaces.nextElement();
+				netlist.add(0,ni);
+			}  
+
+			for(NetworkInterface list:netlist) { 
+				Enumeration<?> cardipaddress = list.getInetAddresses();
+   
+				while(cardipaddress.hasMoreElements()){
+					InetAddress ip = (InetAddress) cardipaddress.nextElement();
+					if(ip instanceof Inet6Address)  {  
+						if(ip.getHostAddress().contains("%"))
+						{
+							ReturnIP.add(ip.getHostAddress().split("%")[1]);
+						}
+						else
+						{
+							ReturnIP.add(ip.getHostAddress());
+						}
+						IPV6_Support = 1;
+					}
+
+					if(ip instanceof Inet4Address)  {   
+						ReturnIP.add(ip.getHostAddress());
+					}	
+                }
+        
+          }
+ 
+ 
+		} catch (SocketException e) {
+			e.printStackTrace();
+		} catch (Exception e) {
+			e.printStackTrace();
+		} 
+		
+		return ReturnIP;
+   } 
  
     public static InetAddress getServerIP() {
         InetAddress myServer;
@@ -923,13 +1225,23 @@ public class Main {
 	
 	public static void AddBlock(String ip)
 	{
-		String IP = getIPAddress(ip);
+		int type = isIPAddress(ip);
+		String IP = "";
+		if(type!=0)
+		{
+			IP = ip;
+		}
+		else
+		{
+			return;
+		}
+		
 		if(IP != null)
 		{
-			if(!IP.equals(SIP) && !IP.equals(LIP))
+			if(!ip.equals(SIP) && !LocalIPS.contains(IP) && !isInnerIP(IP))
     		{
-				Exec("route add -host "+IP+" gw 127.0.0.1",true);
-				Exec("iptables -I INPUT -s "+IP+" -j DROP",true);
+				Log("INFO","Block SS ATTACK IP:"+IP);
+				Exec("ip"+(type==2?"6":"")+"tables -I INPUT -s "+IP+" -j DROP",true);
 				Exec("echo -e \"ALL: "+IP+"\" >> /etc/hosts.deny",true);
 				Lastreadline ++;
 				SaveLine(Lastreadline);
@@ -937,22 +1249,92 @@ public class Main {
 		}
 	}
 	
+	public static void AddBlockSS(String ip)
+	{
+		int type = isIPAddress(ip);
+		String IP = "";
+		if(type!=0)
+		{
+			IP = ip;
+		}
+		else
+		{
+			return;
+		}
+		
+		if(IP != null)
+		{
+			if(!IP.equals(SIP) && !LocalIPS.contains(IP) && !isInnerIP(IP))
+    		{
+				Log("INFO","Block SS ATTACK IP:"+IP);
+				Exec("ip"+(type==2?"6":"")+"tables -I INPUT -s "+IP+" -j DROP",true);
+				Exec("echo -e \"ALL: "+IP+"\" >> /etc/hosts.deny",true);
+    		}
+		}
+	}
+	
 	
 	public static void DeleteBlock(String ip)
 	{
-		String IP = getIPAddress(ip);
+		int type = isIPAddress(ip);
+		String IP = "";
+		if(type!=0)
+		{
+			IP = ip;
+		}
+		else
+		{
+			return;
+		}
+		
 		if(IP != null)
 		{
+			Log("INFO","Unblock IP:"+IP);
 			Exec("route del "+IP,true);
-			Exec("iptables -D INPUT -s "+IP+" -j DROP",true);
+			Exec("ip"+(type==2?"6":"")+"tables -D INPUT -s "+IP+" -j DROP",true);
 			Exec("sed -i \"s/ALL: "+IP+"/##Removed/g\" `grep "+IP+" -rl /etc/hosts.deny`",true);
 		}
 	}
 	
 	
-	public static String getIPAddress(String text) {
+	public static int isIPAddress(String text) {
+		InetAddress ia;
+		try {
+			ia = InetAddress.getByName(text);
+		} catch (UnknownHostException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+			return 0;
+		}
+		boolean flag1 = ia instanceof Inet4Address;
+		boolean flag2 = ia instanceof Inet6Address;
+		
+		if(flag1) {
+			return 1;
+		}else if(flag2) {
+			return 2;
+		}else {
+			return 0;
+		}
+	}
+	
+	public static String getIP4Address(String text) {
 		String IPADDRESS_PATTERN = 
 		        "(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)";
+		
+		Pattern pattern = Pattern.compile(IPADDRESS_PATTERN);
+		Matcher matcher = pattern.matcher(text);
+		        if (matcher.find()) {
+		            return matcher.group();
+		        }
+		        else{
+		            return null;
+		        }
+	}
+	
+	public static String getIP6Address(String text) {
+		String IPADDRESS_PATTERN = 
+				"^([\\da-fA-F]{1,4}:){6}((25[0-5]|2[0-4]\\d|[01]?\\d\\d?)\\.){3}(25[0-5]|2[0-4]\\d|[01]?\\d\\d?)|::([\\da−fA−F]1,4:)0,4((25[0−5]|2[0−4]\\d|[01]?\\d\\d?)\\.)3(25[0−5]|2[0−4]\\d|[01]?\\d\\d?)|^([\\da-fA-F]{1,4}:):([\\da-fA-F]{1,4}:){0,3}((25[0-5]|2[0-4]\\d|[01]?\\d\\d?)\\.){3}(25[0-5]|2[0-4]\\d|[01]?\\d\\d?)|([\\da−fA−F]1,4:)2:([\\da−fA−F]1,4:)0,2((25[0−5]|2[0−4]\\d|[01]?\\d\\d?)\\.)3(25[0−5]|2[0−4]\\d|[01]?\\d\\d?)|^([\\da-fA-F]{1,4}:){3}:([\\da-fA-F]{1,4}:){0,1}((25[0-5]|2[0-4]\\d|[01]?\\d\\d?)\\.){3}(25[0-5]|2[0-4]\\d|[01]?\\d\\d?)|([\\da−fA−F]1,4:)4:((25[0−5]|2[0−4]\\d|[01]?\\d\\d?)\\.)3(25[0−5]|2[0−4]\\d|[01]?\\d\\d?)|^([\\da-fA-F]{1,4}:){7}[\\da-fA-F]{1,4}|:((:[\\da−fA−F]1,4)1,6|:)|^[\\da-fA-F]{1,4}:((:[\\da-fA-F]{1,4}){1,5}|:)|([\\da−fA−F]1,4:)2((:[\\da−fA−F]1,4)1,4|:)|^([\\da-fA-F]{1,4}:){3}((:[\\da-fA-F]{1,4}){1,3}|:)|([\\da−fA−F]1,4:)4((:[\\da−fA−F]1,4)1,2|:)|^([\\da-fA-F]{1,4}:){5}:([\\da-fA-F]{1,4})?|([\\da−fA−F]1,4:)6:";
 		
 		Pattern pattern = Pattern.compile(IPADDRESS_PATTERN);
 		Matcher matcher = pattern.matcher(text);
@@ -985,10 +1367,10 @@ public class Main {
             String[] cmdA = { "/bin/sh", "-c", cmd };
             if(NeedReturn==false)
             {
-            	Runtime.getRuntime().exec(cmdA);
+            	new ProcessBuilder(cmdA).start();
             	return null;
             }
-            Process process = Runtime.getRuntime().exec(cmdA);
+            Process process = new ProcessBuilder(cmdA).start();
             LineNumberReader br = new LineNumberReader(new InputStreamReader(
                     process.getInputStream()));
             StringBuffer sb = new StringBuffer();
@@ -996,6 +1378,7 @@ public class Main {
             while ((line = br.readLine()) != null) {
                 sb.append(line).append("\n");
             }
+            br.close();
             return sb.toString();
         } catch (Exception e) {
             e.printStackTrace();
@@ -1031,6 +1414,7 @@ public class Main {
             		returnvalue[2] = TempArray[1];
             	}
             }
+            br.close();
             return returnvalue;
         } catch (Exception e) {
             e.printStackTrace();
@@ -1039,40 +1423,7 @@ public class Main {
     }
 	
 	
-	public static void PrepareSpeedLimit()
-	{
-		Exec("tc qdisc add dev "+Node_Nic+" handle 8964: root htb",true);
-	}
-	
-	public static void AddSpeedLimit(String Port,String Speed,String Id)
-	{
-		Exec("tc class add dev "+Node_Nic+" parent 8964:0 classid 8964:"+Id+" htb rate "+Speed+"mbps",true);
-		Exec("tc class add dev eth0 parent 8964:"+Id+" classid 8964:"+(Integer.valueOf(Id)+5000)+" htb rate "+Speed+"Mbit ceil "+Speed+"Mbit",true);
-		Exec("tc filter add dev "+Node_Nic+" protocol ip prio 1 u32 match ip dport "+Port+" 0xffff flowid 8964:"+(Integer.valueOf(Id)+5000),true);
-		Exec("tc filter add dev "+Node_Nic+" protocol ip prio 1 u32 match ip sport "+Port+" 0xffff flowid 8964:"+(Integer.valueOf(Id)+5000),true);
-	}
-	
-	public static void DeleteSpeedLimit(String Id)
-	{
-		String ReturnString = Exec("tc filter list dev "+Node_Nic+" |grep \"flowid 8964:"+Id+"\"|awk '{print $10}'",true);
-		String[] ReturnArray = ReturnString.split("\n");
-		for(String FId:ReturnArray)
-		{
-			if(Node_SpeedLimit_Method == 1)
-			{
-				Exec("tc filter delete dev "+Node_Nic+" parent 8964:0 protocol ip prio 1 handle "+FId+" u32",true);
-			}
-		}
-	}
 
-	public static void ResetSpeedLimit()
-	{
-	
-		Exec("tc qdisc del dev "+Node_Nic+" root",true);
-	
-		Exec("killall trickle",true);
-	
-	}
 	
 	public static void AddTempBlock(String Ip,int Port)
 	{
@@ -1146,7 +1497,7 @@ public class Main {
 	public static void DeleteUser(int UserId)
 	{
 		try{
-			Log("info","Deleting User..."+UserId);
+			Log("INFO","Deleting User..."+UserId);
 			File PidFile=new File("/tmp/ssshell/"+UsersInfoHashMap.get(UserId).getId()+".pid");
 			if(PidFile.exists())
 			{
@@ -1167,6 +1518,11 @@ public class Main {
     		PortBandWidthHashMap.remove(UsersInfoHashMap.get(UserId).getPort());
     		PortUserIdHashMap.remove(UsersInfoHashMap.get(UserId).getPort());
     		
+    		if(Httponly == 1)
+    		{
+    			Exec("iptables -t filter -m owner --uid-owner ssshell-subuser -A OUTPUT -p tcp --sport "+UsersInfoHashMap.get(UserId).getPort()+" -j ACCEPT",false);
+    		}
+    		
     		if(UserLimitCount.get(UserId)!=0)
     		{
     			UserCurrentIP.remove(UserId);
@@ -1174,11 +1530,6 @@ public class Main {
     		
     		UserLimitCount.remove(UserId);
     		
-    		
-    		if(UsersInfoHashMap.get(UserId).getSpeedLimit() != 0 && Node_SpeedLimit_Method == 1)
-    		{
-    			DeleteSpeedLimit(String.valueOf(UserId));
-    		}
     		
 			UsersInfoHashMap.remove(UserId);
 			//UserBandwidthHashMap.remove(UserId);
@@ -1191,7 +1542,7 @@ public class Main {
 	
 	public static void AddUser(String UserName,int Port,String Passwd,int Id,String Method,int SpeedLimit,int LimitCount)
 	{
-		Log("info","Adding User..."+UserName);
+		Log("INFO","Adding User..."+UserName);
 		
 		DeleteFile("/tmp/ssshell/"+Id+".conf");
 		
@@ -1203,28 +1554,21 @@ public class Main {
 		
 		try {
 	         BufferedWriter FileOutPutWriter = new BufferedWriter(new FileWriter("/tmp/ssshell/"+Id+".conf"));
-	         FileOutPutWriter.write("{\"server\":\"0.0.0.0\",\"server_port\":"+Port+",\"local_port\":1080,\"password\":\""+Passwd+"\",\"timeout\":60,\"method\":\""+Method+"\"}");
+	         FileOutPutWriter.write("{\"server\":"+(IPV6_Support==1?"[\"[::0]\", \"0.0.0.0\"]":"\"0.0.0.0\"")+",\"server_port\":"+Port+",\"local_port\":1080,\"password\":\""+Passwd+"\",\"timeout\":60,\"method\":\""+Method+"\"}");
 	         FileOutPutWriter.close();
 		} catch (IOException e) {
 			System.err.println("Exception: " + e.getMessage()+e.getStackTrace().toString()+e.getLocalizedMessage()+e.getCause());
 		}
 		
-		Exec("chmod 600 /tmp/ssshell/"+Id+".conf",false);
 		
-		if(Node_SpeedLimit_Method == 1)
+		
+		if(SpeedLimit == 0)
 		{
-			Exec("ss-server -c /tmp/ssshell/"+Id+".conf -f /tmp/ssshell/"+Id+".pid -u -d 208.67.222.222",true);
+			Exec("ss-server -a ssshell-subuser -c /tmp/ssshell/"+Id+".conf -f /tmp/ssshell/"+Id+".pid -u -d 208.67.222.222",true);
 		}
 		else
 		{
-			if(Node_SpeedLimit_Method == 2 && SpeedLimit != 0)
-			{
-				Exec("trickle -d "+(SpeedLimit*1024/8)+" -u "+(SpeedLimit*1024/8)+" ss-server -c /tmp/ssshell/"+Id+".conf -f /tmp/ssshell/"+Id+".pid -u -d 208.67.222.222",true);
-			}
-			else
-			{
-				Exec("ss-server -c /tmp/ssshell/"+Id+".conf -f /tmp/ssshell/"+Id+".pid -u -d 208.67.222.222",true);
-			}
+			Exec("trickle -d "+(SpeedLimit*1024/8)+" -u "+(SpeedLimit*1024/8)+" ss-server -a ssshell-subuser -c /tmp/ssshell/"+Id+".conf -f /tmp/ssshell/"+Id+".pid -u -d 208.67.222.222",true);
 		}
 		
 		UserPortList.add(Port);
@@ -1238,12 +1582,45 @@ public class Main {
 		
 		PortUserIdHashMap.put(Port, Id);
 		
-		if(Node_SpeedLimit_Method == 1&&SpeedLimit != 0)
-		{
-			AddSpeedLimit(String.valueOf(Port),String.valueOf(SpeedLimit),String.valueOf(Id));
-		}
 		
 	}
+	
+	public static boolean isInnerIP(String ipAddress){
+		boolean isInnerIp = false;
+		long ipNum = getIpNum(ipAddress);
+		/**
+		私有IP：A类  10.0.0.0-10.255.255.255
+		B类  172.16.0.0-172.31.255.255
+		C类  192.168.0.0-192.168.255.255
+		当然，还有127这个网段是环回地址
+		**/
+		long aBegin = getIpNum("10.0.0.0");
+		long aEnd = getIpNum("10.255.255.255");
+		long bBegin = getIpNum("172.16.0.0");
+		long bEnd = getIpNum("172.31.255.255");
+		long cBegin = getIpNum("192.168.0.0");
+		long cEnd = getIpNum("192.168.255.255");
+		isInnerIp = isInner(ipNum,aBegin,aEnd) || isInner(ipNum,bBegin,bEnd) || isInner(ipNum,cBegin,cEnd) || ipAddress.equals("127.0.0.1");
+		return isInnerIp;
+	}
+	
+	private static long getIpNum(String ipAddress) {
+		String [] ip = ipAddress.split("\\.");
+		long a = Integer.parseInt(ip[0]);
+		long b = Integer.parseInt(ip[1]);
+		long c = Integer.parseInt(ip[2]);
+		long d = Integer.parseInt(ip[3]);
+		long ipNum = a * 256 * 256 * 256 + b * 256 * 256 + c * 256 + d;
+		return ipNum;
+	}
+	
+	private static boolean isInner(long userIp,long begin,long end){
+		return (userIp>=begin) && (userIp<=end);
+	}
+	
+	
+	
+	
 	
 	public static String getIpAddress(byte[] rawBytes) {
         int i = 4;
@@ -1254,6 +1631,22 @@ public class Main {
             if (--i > 0)
             {
                 ipAddress += ".";
+            }
+        }
+
+        return ipAddress;
+    }
+	
+	
+	public static String getIpV6Address(byte[] rawBytes) {
+        int i = 6;
+        String ipAddress = "";
+        for (byte raw : rawBytes)
+        {
+            ipAddress += (raw & 0xFF);
+            if (--i > 0)
+            {
+                ipAddress += ":";
             }
         }
 
